bug fix - Editor causes horizontal scrolling #10

--- a/index.css
+++ b/index.css
@@ -1,87 +1,137 @@
 :root {
-    --bgPrimary: #fff;
-    --fgPrimary: #000;
-    --fgSecondary: #777;
-    --themePrimary: #007acc;
-    --controlHover: #0001;
-    --controlActive: #0002;
+  --bgPrimary: #fff;
+  --fgPrimary: #000;
+  --fgSecondary: #777;
+  --themePrimary: #007acc;
+  --controlHover: #0001;
+  --controlActive: #0002;
 }
 
 body {
-    background-color: var(--bgPrimary);
-    color: var(--fgPrimary);
-    font-family: sans-serif;
-    line-height: 1.5rem;
-    margin: 0;
+  background-color: var(--bgPrimary);
+  color: var(--fgPrimary);
+  font-family: sans-serif;
+  line-height: 1.5rem;
+  margin: 0;
 }
 
-#code { font-family: Monaco, Menlo, monospace; }
+#code {
+  font-family: Monaco, Menlo, monospace;
+}
 
-main { display: flex; }
+main {
+  display: flex;
+}
 
-header, main { max-width: 70rem; margin: 1rem auto; }
+header,
+main {
+  max-width: 70rem;
+  margin: 1rem auto;
+}
 
-#editor, #preview { flex: 50%; }
+#editor,
+#preview {
+  flex: 50%;
+}
 
-#preview { margin-left: 4rem; }
+#preview {
+  margin-left: 4rem;
+}
 
 textarea {
-    width: 100%;
-    height: 20rem;
-    font-size: 1rem;
-    background-color: var(--bgPrimary);
-    color: var(--fgPrimary);
-    resize: none;
+  width: 100%;
+  height: 20rem;
+  font-size: 1rem;
+  background-color: var(--bgPrimary);
+  color: var(--fgPrimary);
+  resize: none;
 }
 
-textarea, button { border: 1px solid #8a8a8a; border-radius: 2px; padding: 0.5rem 1rem; }
+textarea,
+button {
+  border: 1px solid #8a8a8a;
+  border-radius: 2px;
+  padding: 0.5rem 1rem;
+}
 
-#subtitle { color: var(--fgSecondary); }
+textarea {
+  width: calc(100% - 2rem);
+}
 
-#links { display: inline; }
+#subtitle {
+  color: var(--fgSecondary);
+}
 
-#links li { display: inline; margin-right: 1em; }
+#links {
+  display: inline;
+}
 
-a { text-decoration: none; color: var(--themePrimary); }
+#links li {
+  display: inline;
+  margin-right: 1em;
+}
 
-a:hover { text-decoration: underline; }
+a {
+  text-decoration: none;
+  color: var(--themePrimary);
+}
+
+a:hover {
+  text-decoration: underline;
+}
 
 button {
-    display: inline-block;
-
-    margin: 0;
-    margin-right: 1rem;
-    text-decoration: none;
-    background: none;
-    color: var(--fgPrimary);
-    font-family: sans-serif;
-    font-size: 0.9rem;
-    min-width: 80px;
-    cursor: pointer;
-    text-align: center;
-    -webkit-appearance: none;
-    -moz-appearance: none;
+  display: inline-block;
+  margin: 0.4rem;
+  margin-right: 1rem;
+  text-decoration: none;
+  background: none;
+  color: var(--fgPrimary);
+  font-family: sans-serif;
+  font-size: 0.9rem;
+  min-width: 80px;
+  cursor: pointer;
+  text-align: center;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
 
 button[disabled] {
-    cursor: not-allowed;
+  cursor: not-allowed;
 }
 
-button:hover, button:focus { background: var(--controlHover); }
+button:hover,
+button:focus {
+  background: var(--controlHover);
+}
 
-button:active { background: var(--controlActive); }
+button:active {
+  background: var(--controlActive);
+}
 
-@media only screen and (max-width: 50rem) { main { display: block; } #preview { margin: 2rem 0; } }
+@media only screen and (max-width: 50rem) {
+  main {
+    display: block;
+  }
+  #preview {
+    margin: 2rem 0;
+  }
+}
 
-@media only screen and (max-width: 72rem) { header, main { margin: 1rem; } }
+@media only screen and (max-width: 72rem) {
+  header,
+  main {
+    margin: 1rem;
+  }
+}
 
 @media (prefers-color-scheme: dark) {
-    :root {
-        --bgPrimary: #1e1e1e;
-        --bgSecondary: #333;
-        --fgPrimary: #fff;
-        --fgSecondary: #aaa;
-        --controlHover: #fff1;
-        --controlActive: #fff2;
-    }
+  :root {
+    --bgPrimary: #1e1e1e;
+    --bgSecondary: #333;
+    --fgPrimary: #fff;
+    --fgSecondary: #aaa;
+    --controlHover: #fff1;
+    --controlActive: #fff2;
+  }
 }
